# prezentprogramo

./: CHANGES.rst  CHANGES.txt  CONTRIBUTORS.txt  LICENSE.txt  Makefile  README.rst  in.sh  install_helper_test.sh  pyproject.toml  setup.cfg  test1.sh
.github/workflows/: syntax.yml  test.yml
docs/: CHANGES.rst  conf.py  dectype4pdf.rst  index.rst  introduction.rst  presentations.rst  templates.rst  todo.rst
docs/examples/: cpu.rst  hovercraft.rst  positions.rst  tutorial.rst
docs/examples/cpu/: index.html
docs/examples/tutorial/: index.html
hovercraft/: __init__.py  converter.py  generate.py  position.py  template.py
hovercraft/templates/default/: template.cfg  template.xsl
hovercraft/templates/default/js/: hovercraft.js
hovercraft/templates/simple/: template.xsl
hovercraft/templates/simple/js/: hovercraft.js
old_hovercraft/: __init__.py
old_hovercraft/templates/default/: template.xsl
old_hovercraft/templates/simple/: template.cfg
src/hovercraft/: __init__.py  template.py
src/hovercraft/templates/simple/: template.xsl
src/prezentprogramo/: core.py  directives.py  main.py  old1_writers.py  readers.py  run.py  run10.py  run2.py  run3.py  run4.py  run5.py  run6.py  run7.py  run8.py  writers.py
tests/: test_hovercraft.py  test_template.py
tests/test_data/: __init__.py  simple.rst
tests/test_data/maximal/: template.cfg
