# https://packaging.python.org/en/latest/tutorials/packaging-projects/
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#writing-pyproject-toml

[project]
name = "Prezentprogramo"
version = "3.2"
authors = [
  { name="Ahmad Yoosofan", email="yoosofan@gmx.com" },
]
description = "Makes impress.js presentations from reStructuredText"
# description = "Another text based (rst) presentation tool"

readme = "README.rst"
license = "GPL-3.0-or-later"
#license-files = ["LICENSE.txt"]

requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Multimedia :: Graphics :: Presentation",
    "Topic :: Text Processing",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

keywords = ["presentations", "restructuredtext"]

dependencies = [
    "wheel",
    "docutils >= 0.21",
    "lxml>=3.1.0",
    "svg.path",
    "pygments",
    "watchdog",
    "ghostscript",
    "packaging",
    "selenium",
    "webdriver_manager",
    "screeninfo",
    "graphviz",
    "beautifulsoup4",
]

[project.urls]
Homepage = "https://github.com/yoosofan/prezentprogramo"
Issues = "https://github.com/yoosofan/prezentprogramo/issues"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "manual",
]
testing = ["manual"]

#[project.entry-points."hovercraft.main"]
#prezentprogramo = "hovercraft:main"

[project.scripts]
prezentprogramo = "hovercraft:main"

# Good choice for transitioning to the new version and testing it while using old version
#bildumilo = "prezentprogramo.core:main"
bildumilo = "prezentprogramo.main:main"
# https://github.com/docutils/docutils/blob/master/docutils/pyproject.toml


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

#requires = ["uv_build >= 0.9.3"]
#build-backend = "uv_build"

[tool.setuptools.package-data]
"prezentprogramo" = ["data/*"]
"hovercraft" = ["**"]

[tool.flake8]
max-line-length = "120"
ignore = "E203 W503"

[tool.pytest.ini_options]
testpaths = ["tests"]


# [project.optional-dependencies]
# gui = ["PyQt5"]
# cli = [
#   "rich",
#   "click",
# ]

#[tool.setuptools]
#include-package-data = true
#zip-safe = false
#test-suite = "tests"

#[tool.setuptools.packages.find]
#exclude = [
#    "ez_setup",
#    "examples",
#    "tests",
#]
#namespaces = false

#[tool.setuptools.dynamic]
#readme = {file = ["README.rst", "CONTRIBUTORS.txt", "CHANGES.txt"]}
